@@ -166,6 +166,10 @@ if (phpAds_isUser(phpAds_Admin))
 			if ($phpversion < 4000)
 				$fatal[] = str_replace ('{php_version}', phpversion(), $strWarningPHPversion);
 			
+			// Check database extention
+			if (!phpAds_dbAvailable())
+				$fatal[] = $strWarningDBavailable;
+			
 			// Config variables can only be checked with php 4
 			if ($phpversion >= 4000)
 			{
